Increased font size on mobile to prevent ios from zooming on input focus

--- a/stylesheets/_component.toggle-switch.scss
+++ b/stylesheets/_component.toggle-switch.scss
@@ -85,7 +85,7 @@
         color: color(white);
         content: '\F00C \F00D';
         font-family: 'FontAwesome';
-        font-size: 14px;
+        font-size: 16px;
         left: 10px;
         letter-spacing: 10px;
         line-height: 2;
